deploy/base/deploy-drone-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  labels:
    app: drone
    component: runner
    app.kubernetes.io/name: drone-runner
    app.kubernetes.io/instance: drone-runner
spec:
  selector:
    matchLabels:
      app: drone
      component: runner
  template:
    metadata:
      labels:
        app: drone
        component: runner
        app.kubernetes.io/name: drone-runner
        app.kubernetes.io/instance: drone-runner
    spec:
      containers:
      - name: drone-runner
        image: drone/drone-runner-kube:latest
        ports:
        - name: http
          protocol: TCP
          containerPort: 3000
