deploy/base/deploy-element.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  labels:
    app: element
    component: web
    app.kubernetes.io/name: element
    app.kubernetes.io/instance: element
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Element image requires write access for Nginx configuration"
    ignore-check.kube-linter.io/run-as-non-root: "Not yet implemented"
spec:
  selector:
    matchLabels:
      app: element
      component: web
  template:
    metadata:
      labels:
        app: element
        component: web
        app.kubernetes.io/name: element
        app.kubernetes.io/instance: element
    spec:
      containers:
      - name: element
        image: vectorim/element-web:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: config
            mountPath: /app/config.json
            subPath: config.json
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "250m"
      volumes:
      - name: config
        configMap:
          name: element-config
