deploy/base/deploy-elon-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elon-staging
  labels:
    app.kubernetes.io/name: elon-staging
    app.kubernetes.io/instance: elon-staging
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elon-staging
      app.kubernetes.io/instance: elon-staging
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elon-staging
        app.kubernetes.io/instance: elon-staging
    spec:
      containers:
      - image: netfluxio/elon:latest
        imagePullPolicy: Always
        name: elon-staging
        ports:
        - name: http
          protocol: TCP
          containerPort: 8000
        resources:
          requests:
            memory: "16Mi"
            cpu: "20m"
          limits:
            memory: "32Mi"
            cpu: "50m"
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
