deploy/base/deploy-invidious.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  labels:
    app: invidious
    component: web
    app.kubernetes.io/name: invidious
    app.kubernetes.io/instance: invidious
spec:
  selector:
    matchLabels:
      app: invidious
      component: web
  template:
    metadata:
      labels:
        app: invidious
        component: web
        app.kubernetes.io/name: invidious
        app.kubernetes.io/instance: invidious
    spec:
      containers:
      - image: quay.io/invidious/invidious:latest
        imagePullPolicy: IfNotPresent
        name: invidious
        ports:
        - name: http
          protocol: TCP
          containerPort: 3000
        volumeMounts:
        - mountPath: /invidious/config/config.yml
          subPath: config.yml
          name: config
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        lifecycle:
          preStop:
            exec:
              command: ["kill", "-INT", "1"]
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/v1/comments/jNQXAC9IVRw
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: invidious-config
