deploy/base/deploy-netflux-homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflux-homepage
  labels:
    app: netflux-homepage
    component: web
    app.kubernetes.io/name: netflux-homepage
    app.kubernetes.io/instance: netflux-homepage
spec:
  selector:
    matchLabels:
      app: netflux-homepage
      component: web
  template:
    metadata:
      labels:
        app: netflux-homepage
        component: web
        app.kubernetes.io/name: netflux-homepage
        app.kubernetes.io/instance: netflux-homepage
    spec:
      containers:
      - image: netfluxio/homepage@sha256:fc253db170fddf4c4cf60aa4e1cefd4f9becb1305aba0929034d2b7636b6aad1
        imagePullPolicy: Always
        name: netflux-homepage
        ports:
        - name: http
          protocol: TCP
          containerPort: 9000
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        securityContext:
          readOnlyRootFilesystem: true
