deploy/base/deploy-solar-toolkit-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-toolkit-gateway
  labels:
    app: solar-toolkit-gateway
    component: web
    app.kubernetes.io/name: solar-toolkit-gateway
    app.kubernetes.io/instance: solar-toolkit-gateway
  annotations:
    ignore-check.kube-linter.io/run-as-non-root: "Not yet implemented"
spec:
  selector:
    matchLabels:
      app: solar-toolkit-gateway
      component: web
  template:
    metadata:
      labels:
        app: solar-toolkit-gateway
        component: web
        app.kubernetes.io/name: solar-toolkit-gateway
        app.kubernetes.io/instance: solar-toolkit-gateway
    spec:
      containers:
      - image: netfluxio/solar-toolkit@sha256:a2251b90278bf66c04980fb4e16353195f2dbd07690df2922b61a7cf09aea049
        imagePullPolicy: Always
        name: solar-toolkit
        ports:
        - name: http
          protocol: TCP
          containerPort: 8888
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthz
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        securityContext:
          readOnlyRootFilesystem: true
