deploy/base/svc-drone.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: drone
    app.kubernetes.io/name: drone
  name: drone
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: drone
    app.kubernetes.io/name: drone
  type: ClusterIP
