deploy/base/svc-element.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: element
    app.kubernetes.io/name: element
  name: element
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: element
    app.kubernetes.io/name: element
  type: ClusterIP
