deploy/base/svc-invidious.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: invidious
  name: invidious
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: invidious
    app.kubernetes.io/name: invidious
  type: ClusterIP
