deploy/base/svc-solar-toolkit-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-toolkit-gateway
    component: web
    app.kubernetes.io/instance: solar-toolkit-gateway
    app.kubernetes.io/name: solar-toolkit-gateway
  name: solar-toolkit-gateway
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: solar-toolkit-gateway
    component: web
  type: ClusterIP
